update show count attack on map

--- a/WebContent/html/dynamicmap.html
+++ b/WebContent/html/dynamicmap.html
@@ -56,7 +56,7 @@
 			<div class="detail-header">
 				<h4 class='detail-caption'>
 					DANH SÁCH CÁC KẾT NỐI
-					<div id='attack-count' class="count">0</div>
+					<div id='connect-count' class="count">0</div>
 				</h4>
 				<div class="detailrow">
 					<div class="source">Nguồn dữ liệu</div>
@@ -88,7 +88,10 @@
 		</div>
 		<div class="detail-block" id="detail-c">
 			<div class="detail-header">
-				<h4 class='detail-caption'>DANH SÁCH DẤU HIỆU TẤN CÔNG</h4>
+				<h4 class='detail-caption'>
+					DANH SÁCH DẤU HIỆU TẤN CÔNG
+					<div id='attack-count' class="count">0</div>
+				</h4>
 				<div class="detailrow">
 					<div class="src">Địa chỉ IP nguồn</div>
 					<div class="srcport">Cổng nguồn</div>
