--- a/WebContent/html/dynamicmap.html
+++ b/WebContent/html/dynamicmap.html
@@ -7,13 +7,16 @@
 <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css" />
 <link rel="stylesheet" href="css/animate.css" />
 <link rel="stylesheet" href="css/sweetalert.css" />
+<link rel="stylesheet" href="css/select2.min.css" />
 <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css" />
 
 <link rel="stylesheet" href="css/style.css" />
 <link rel="stylesheet" href="css/dynamicmapnew.css" />
 
 <script type="text/javascript" src="js/jquery.min.js"></script>
+<script type="text/javascript" src="js/sweetalert.min.js"></script>
 <script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
+<script type="text/javascript" src="js/select2.min.js"></script>
 
 <script type="text/javascript" src="js/script.js"></script>
 <script type="text/javascript" src="js/dynamicmapnew.js"></script>
@@ -126,24 +129,24 @@
 							class="form-control" filter="srcport">
 					</div>
 					<div class='result-type'></div>
+					<hr>
 				</div>
-				<hr>
 				<div id="dstport">
 					<div class="form-group">
 						<label for="sourceip">Cổng đích:</label> <input type="text"
 							class="form-control" filter="dstport">
 					</div>
 					<div class='result-type'></div>
+					<hr>
 				</div>
-				<hr>
 				<div id="protocol">
 					<div class="form-group">
 						<label for="protocol">Giao thức:</label>
 						<div class="btn-group">
 							<button active="false" class="btn btn-default btn-filterchoose"
-								filter="protocol" value-filter="TCB">TCB</button>
+								filter="protocol" value-filter="TCP">TCP</button>
 							<button active="false" class="btn btn-default btn-filterchoose"
-								filter="protocol" value-filter="UDB">UDB</button>
+								filter="protocol" value-filter="UDP">UDP</button>
 							<button active="false" class="btn btn-default btn-filterchoose"
 								filter="protocol" value-filter="ICMP">ICMP</button>
 						</div>
@@ -152,8 +155,8 @@
 							value-filter="all">Tất cả</button>
 					</div>
 					<div class='result-type'></div>
+					<hr>
 				</div>
-				<hr>
 				<div id="action">
 					<div class="form-group">
 						<label for="action">Hành động:</label>
@@ -168,8 +171,9 @@
 							value-filter="all">Tất cả</button>
 					</div>
 					<div class='result-type'></div>
+					<hr>
 				</div>
-				<div id="action">
+				<div id="priority">
 					<div class="form-group">
 						<label for="priority">Mức độ:</label>
 						<div class="btn-group">
@@ -177,7 +181,7 @@
 								filter="priority" value-filter="1">HIGH</button>
 							<button active="false" class="btn btn-default btn-filterchoose"
 								filter="priority" value-filter="2">MEDIUM</button>
-								<button active="false" class="btn btn-default btn-filterchoose"
+							<button active="false" class="btn btn-default btn-filterchoose"
 								filter="priority" value-filter="3">LOW</button>
 						</div>
 
@@ -185,28 +189,46 @@
 							value-filter="all">Tất cả</button>
 					</div>
 					<div class='result-type'></div>
+					<hr>
 				</div>
-				<hr>
 				<div id="signame">
 					<div class="form-group">
-						<label for="signame">Mẫu nhận dạng tấn công:</label> <input type="text"
-							class="form-control" filter="signame">
+						<label for="signame">Mẫu nhận dạng tấn công:</label> <input
+							type="text" class="form-control" filter="signame">
 					</div>
 					<div class='result-type'></div>
+					<hr>
 				</div>
-				<hr>
 				<div id="classification">
 					<div class="form-group">
 						<label for="classification">Phân loại:</label> <input type="text"
 							class="form-control" filter="classification">
 					</div>
 					<div class='result-type'></div>
+					<hr>
+				</div>
+				<div id="filter-location">
+					<div class="row">
+						<div combobox="left" class="form-group col-md-5">
+							<label>Điểm nguồn</label> <select class="form-control">
+							</select>
+						</div>
+						<div combobox="right" class="form-group col-md-5">
+							<label>Điểm đích</label> <select class="form-control"></select>
+						</div>
+						<button class="col-md-2 btn btn-primary" id="add-left-to-right">
+							<i class="fa fa-plus"></i> Thêm
+						</button>
+					</div>
+					<div class='result'></div>
 				</div>
 			</div>
 			<div class="modal-footer">
-				<button type="button" class="btn btn-primary" data-dismiss="modal">Áp
-					dụng</button>
-				<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+				<button type="button" class="btn btn-primary" data-dismiss="modal"
+					id="apply-filter-replay">Áp dụng xem lại</button>
+				<button type="button" class="btn btn-primary" data-dismiss="modal"
+					id="apply-filter-realtime">Áp dụng thời gian thực</button>
+				<button type="button" class="btn btn-default" data-dismiss="modal">Đóng</button>
 			</div>
 		</div>
 
