update signame and classification

--- a/WebContent/html/dynamicmap.html
+++ b/WebContent/html/dynamicmap.html
@@ -192,17 +192,27 @@
 					<hr>
 				</div>
 				<div id="signame">
-					<div class="form-group">
-						<label for="signame">Mẫu nhận dạng tấn công:</label> <input
-							type="text" class="form-control" filter="signame">
+					<div class="row">
+						<div combobox="left" class="form-group col-md-10">
+							<label for="signame">Mẫu nhận dạng tấn công:</label> <select
+								class="form-control"></select>
+						</div>
+						<button class="col-md-2 btn btn-primary" id="add-signame">
+							<i class="fa fa-plus"></i> Thêm
+						</button>
 					</div>
 					<div class='result-type'></div>
 					<hr>
 				</div>
 				<div id="classification">
-					<div class="form-group">
-						<label for="classification">Phân loại:</label> <input type="text"
-							class="form-control" filter="classification">
+					<div class="row">
+						<div combobox="left" class="form-group col-md-10">
+							<label for="signame">Phân loại:</label> <select
+								class="form-control"></select>
+						</div>
+						<button class="col-md-2 btn btn-primary" id="add-classification">
+							<i class="fa fa-plus"></i> Thêm
+						</button>
 					</div>
 					<div class='result-type'></div>
 					<hr>
