--- a/WebContent/html/viewflowlist.html
+++ b/WebContent/html/viewflowlist.html
@@ -13,6 +13,7 @@
 
 	<link rel="stylesheet" href="css/style.css"/>
 	<link rel="stylesheet" href="css/viewflowlist.css"/>
+	<link rel='shortcut icon' type='image/x-icon' href='favicon.ico' />
 
 	<script type="text/javascript" src="js/jquery.min.js"></script>
 	<script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
@@ -24,7 +25,7 @@
 	<script type="text/javascript" src="js/script.js"></script>
 	<script type="text/javascript" src="js/viewflowlist.js"></script>
 
-	<title>Monitoring Dashboard</title>
+	<title>IT Monitoring Appliance | Màn hình giám sát</title>
 </head>
 <body>
 	<div class="dashboard-header" id="viewflowlist-header">
