--- a/WebContent/html/dynamicmap.html
+++ b/WebContent/html/dynamicmap.html
@@ -12,6 +12,7 @@
 
 <link rel="stylesheet" href="css/style.css" />
 <link rel="stylesheet" href="css/dynamicmapnew.css" />
+<link rel='shortcut icon' type='image/x-icon' href='favicon.ico' />
 
 <script type="text/javascript" src="js/jquery.min.js"></script>
 <script type="text/javascript" src="js/sweetalert.min.js"></script>
