--- a/WebContent/html/statusmaplist.html
+++ b/WebContent/html/statusmaplist.html
@@ -9,20 +9,18 @@
 	<link rel="stylesheet" href="font-awesome/css/font-awesome.min.css"/>
 	<link rel="stylesheet" href="css/svgTimer.css"/>
 	<link rel="stylesheet" href="css/swiper.min.css"/>
-
-
 	<link rel="stylesheet" href="css/style.css"/>
 	<link rel="stylesheet" href="css/statusmap.css"/>
+	<link rel='shortcut icon' type='image/x-icon' href='favicon.ico' />
 
 	<script type="text/javascript" src="js/jquery.min.js"></script>
 	<script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="js/svgTimer.js"></script>
 	<script type="text/javascript" src="js/swiper.min.js"></script>
-
 	<script type="text/javascript" src="js/script.js"></script>
 	<script type="text/javascript" src="js/statusmap.js"></script>
 
-	<title>Monitoring Dashboard</title>
+	<title>IT Monitoring Appliance | Màn hình giám sát</title>
 </head>
 <body>
 	<div class="dashboard-header" id="statusmap-header">
