--- a/WebContent/html/viewflowlist.html
+++ b/WebContent/html/viewflowlist.html
@@ -9,11 +9,9 @@
 	<link rel="stylesheet" href="font-awesome/css/font-awesome.min.css"/>
 	<link rel="stylesheet" href="css/svgTimer.css"/>
 	<link rel="stylesheet" href="css/jquery.contextMenu.min.css">
-
-
 	<link rel="stylesheet" href="css/style.css"/>
 	<link rel="stylesheet" href="css/viewflowlist.css"/>
-	<link rel='shortcut icon' type='image/x-icon' href='favicon.ico' />
+	<link rel="icon" type="image/png" href="icon-192.png"/>
 
 	<script type="text/javascript" src="js/jquery.min.js"></script>
 	<script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
@@ -21,7 +19,6 @@
 	<script type="text/javascript" src="js/svgTimer.js"></script>
 	<script type="text/javascript" src="js/jquery.contextMenu.min.js"></script>
 	<script type="text/javascript" src="js/jquery.ui.position.min.js"></script>
-
 	<script type="text/javascript" src="js/script.js"></script>
 	<script type="text/javascript" src="js/viewflowlist.js"></script>
 
