--- a/WebContent/html/dynamicmap.html
+++ b/WebContent/html/dynamicmap.html
@@ -1,29 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="bootstrap/css/bootstrap.min.css" />
-<link rel="stylesheet" href="css/animate.css" />
-<link rel="stylesheet" href="css/sweetalert.css" />
-<link rel="stylesheet" href="css/select2.min.css" />
-<link rel="stylesheet" href="font-awesome/css/font-awesome.min.css" />
-
-<link rel="stylesheet" href="css/style.css" />
-<link rel="stylesheet" href="css/dynamicmapnew.css" />
-<link rel='shortcut icon' type='image/x-icon' href='favicon.ico' />
-
-<script type="text/javascript" src="js/jquery.min.js"></script>
-<script type="text/javascript" src="js/sweetalert.min.js"></script>
-<script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
-<script type="text/javascript" src="js/select2.min.js"></script>
-
-<script type="text/javascript" src="js/script.js"></script>
-<script type="text/javascript" src="js/dynamicmapnew.js"></script>
-<script type="text/javascript" src="js/dynamicmapnewfilter.js"></script>
-
-<title>IT Monitoring Appliance | Màn hình giám sát</title>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" href="bootstrap/css/bootstrap.min.css" />
+	<link rel="stylesheet" href="css/animate.css" />
+	<link rel="stylesheet" href="css/sweetalert.css" />
+	<link rel="stylesheet" href="css/select2.min.css" />
+	<link rel="stylesheet" href="font-awesome/css/font-awesome.min.css" />
+	<link rel="stylesheet" href="css/style.css" />
+	<link rel="stylesheet" href="css/dynamicmapnew.css" />
+	<link rel="icon" type="image/png" href="icon-192.png"/>
+	
+	<script type="text/javascript" src="js/jquery.min.js"></script>
+	<script type="text/javascript" src="js/sweetalert.min.js"></script>
+	<script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
+	<script type="text/javascript" src="js/select2.min.js"></script>
+	<script type="text/javascript" src="js/script.js"></script>
+	<script type="text/javascript" src="js/dynamicmapnew.js"></script>
+	<script type="text/javascript" src="js/dynamicmapnewfilter.js"></script>
+	
+	<title>IT Monitoring Appliance | Màn hình giám sát</title>
 </head>
 <body>
 	<div id="form-select-date">
