--- a/WebContent/html/index.html
+++ b/WebContent/html/index.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" href="css/sweetalert.css"/>
 	<link rel="stylesheet" href="font-awesome/css/font-awesome.min.css"/>
 	<link rel="stylesheet" href="css/style.css"/>
-	<link rel="icon" type="image/png" href="icon-192.png"/>
+	<link rel='shortcut icon' type='image/x-icon' href='favicon.ico'/>
 
 	<script type="text/javascript" src="js/jquery.min.js"></script>
 	<script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
