--- a/WebContent/html/statusmaplist.html
+++ b/WebContent/html/statusmaplist.html
@@ -11,7 +11,7 @@
 	<link rel="stylesheet" href="css/swiper.min.css"/>
 	<link rel="stylesheet" href="css/style.css"/>
 	<link rel="stylesheet" href="css/statusmap.css"/>
-	<link rel="icon" type="image/png" href="icon-192.png"/>
+	<link rel='shortcut icon' type='image/x-icon' href='favicon.ico'/>
 
 	<script type="text/javascript" src="js/jquery.min.js"></script>
 	<script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
