--- a/WebContent/html/dynamicmap.html
+++ b/WebContent/html/dynamicmap.html
@@ -38,7 +38,7 @@
 		<button id="btn-replay" title="Xem lại">
 			<i class='fa fa-step-backward'></i>
 		</button>
-		<button status="pause" id="btn-realtime" title="Xem trực tuyến">
+		<button status="pause" id="btn-realtime" title="Nhấn để xem trực tuyến">
 			<i class='fa fa-play'></i>
 		</button>
 		<button id="btn-filter" title="Bộ lọc" data-toggle="modal"
@@ -48,6 +48,7 @@
 
 		<h2 id="type-map-name"></h2>
 		<h2 id="maps-name"></h2>
+		<h2 id="mode-name"></h2>
 	</div>
 	<div id="svg-container">
 		<img id="img-left" src="" /> <img id="img-right" style='float: right'
@@ -61,9 +62,9 @@
 					<div id='connect-count' class="count">0</div>
 				</h4>
 				<div class="detail-function">
-					<button status="play" class="btn-detail-play"><i class='fa fa-pause'></i></button>
-					<button class="btn-detail-left"><i class='fa fa-chevron-left'></i></button>
-					<button class="btn-detail-right"><i class='fa fa-chevron-right'></i></button>
+					<button status="play" class="btn-detail-play" title="Dừng chuyển trang tự động"><i class='fa fa-pause'></i></button>
+					<button class="btn-detail-left" title="Về trang trước"><i class='fa fa-chevron-left'></i></button>
+					<button class="btn-detail-right" title="Đến trang kế"><i class='fa fa-chevron-right'></i></button>
 				</div>
 				<div class="detailrow">
 					<div class="source">Nguồn dữ liệu</div>
@@ -100,9 +101,9 @@
 					<div id='attack-count' class="count">0</div>
 				</h4>
 				<div class="detail-function">
-					<button status="play" class="btn-detail-play"><i class='fa fa-pause'></i></button>
-					<button class="btn-detail-left"><i class='fa fa-chevron-left'></i></button>
-					<button class="btn-detail-right"><i class='fa fa-chevron-right'></i></button>
+					<button status="play" class="btn-detail-play" title="Dừng chuyển trang tự động"><i class='fa fa-pause'></i></button>
+					<button class="btn-detail-left" title="Về trang trước"><i class='fa fa-chevron-left'></i></button>
+					<button class="btn-detail-right" title="Đến trang kế"><i class='fa fa-chevron-right'></i></button>
 				</div>
 				<div class="detailrow">
 					<div class="src">Địa chỉ IP nguồn</div>
