--- a/WebContent/html/index.html
+++ b/WebContent/html/index.html
@@ -41,11 +41,11 @@
 						<div title='Chiếu' type="flowview" class="btn-show"><i class='fa fa-play'></i></div>
 					</div>
 				</div>
-				<div class="menu-item" style='background: #53a1c3' type="statusmap">
-					<div class="menu-name" style='right: -11px;'>Logview</div>
+				<div class="menu-item" style='background: #53a1c3' type="hostoverview">
+					<div class="menu-name" style='right: -40px;'>Hostoverview</div>
 					<div class="btn-groupshow" style='background: #53a1c3'>
-						<div title='Xem' type="statusmap" class="btn-view"><i class='fa fa-eye'></i></div>
-						<div title='Chiếu' type="statusmap" class="btn-show"><i class='fa fa-play'></i></div>
+						<div title='Xem' type="hostoverview" class="btn-view"><i class='fa fa-eye'></i></div>
+						<div title='Chiếu' type="hostoverview" class="btn-show"><i class='fa fa-play'></i></div>
 					</div>
 				</div>
 				<!-- <div class="menu-item animated bounceInDown">
