--- a/WebContent/html/dynamicmap.html
+++ b/WebContent/html/dynamicmap.html
@@ -138,11 +138,11 @@
 							value-filter="all" style="margin-left:30px;">Tất cả</button>
 						<div class="btn-group">
 							<button active="false" class="btn btn-default btn-filterchoose"
-								filter="protocol" value-filter="TCP">TCP</button>
+								filter="protocol" value-filter="tcp">TCP</button>
 							<button active="false" class="btn btn-default btn-filterchoose"
-								filter="protocol" value-filter="UDP">UDP</button>
+								filter="protocol" value-filter="udp">UDP</button>
 							<button active="false" class="btn btn-default btn-filterchoose"
-								filter="protocol" value-filter="ICMP">ICMP</button>
+								filter="protocol" value-filter="icmp">ICMP</button>
 						</div>
 					</div>
 					<div class='result-type'></div>
