--- a/WebContent/html/dynamicmap.html
+++ b/WebContent/html/dynamicmap.html
@@ -62,6 +62,7 @@
 					<div id='connect-count' class="count">0</div>
 				</h4>
 				<div class="detail-function">
+					<button status="unexpand" id="expand-detail" class="btn-expand" title="Phóng to chi tiết"><i class='fa fa-arrows-alt'></i></button>
 					<button status="play" class="btn-detail-play" title="Dừng chuyển trang tự động"><i class='fa fa-pause'></i></button>
 					<button class="btn-detail-left" title="Về trang trước"><i class='fa fa-chevron-left'></i></button>
 					<button class="btn-detail-right" title="Đến trang kế"><i class='fa fa-chevron-right'></i></button>
