--- a/WebContent/html/dynamicmap.html
+++ b/WebContent/html/dynamicmap.html
@@ -156,9 +156,9 @@
 							value-filter="all" style="margin-left:24px;">Tất cả</button>
 						<div class="btn-group">
 							<button active="false" class="btn btn-default btn-filterchoose"
-								filter="action" value-filter="ALLOW">ALLOW</button>
+								filter="action" value-filter="pass">PASS</button>
 							<button active="false" class="btn btn-default btn-filterchoose"
-								filter="action" value-filter="DROP">DROP</button>
+								filter="action" value-filter="block">BLOCK</button>
 						</div>
 					</div>
 					<div class='result-type'></div>
